[package]
name = "webblender"
version = "0.1.1"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
edition = "2018"
description = "webblender for rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/maxtnuk/webblender.git"

[lib]
cfg-if = "0.1.2"
crate-type=["cdylib","rlib"]

[dependencies]
landon = "0.1.3"
js-sys = "0.3.16"
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2.39", features = ["serde-serialize"] }
lazy_static = "1.3.0"

[dependencies.web-sys]
version = "0.3.17"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlVertexArrayObject",
  "WebGlProgram",
  "WebGlShader",
  "Window",
  "WebGlUniformLocation"
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
